<resources>
    <string name="app_name">HWApplication</string>
    <string name="splash_name">HW</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_location">Map</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="conf_password">Confirm Password</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="register_if_new">Sign Up Instead</string>
    <string name="login_if_already_registered">Click here if you are already registered</string>
    <string name="logout">Logout</string>
    <string name="server_error">Server Error</string>
    <string name="data_not_found">Data not found</string>
    <string name="internet_error">Please check internet connection</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="invalid_email">Invald email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="pass_and_conf_pass_same">Password and confirm password should be same</string>
</resources>