<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_parent_padding"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/tvEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="@dimen/label_padding"
        android:paddingBottom="@dimen/label_padding"
        android:text="@string/email"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shape"
        android:hint="@string/email"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailReg" />

    <TextView
        android:id="@+id/tvNameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="@dimen/label_padding"
        android:paddingBottom="@dimen/label_padding"
        android:text="@string/full_name"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailReg" />

    <EditText
        android:id="@+id/etNameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shape"
        android:hint="@string/full_name"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameReg" />

    <TextView
        android:id="@+id/tvPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="@dimen/label_padding"
        android:paddingBottom="@dimen/label_padding"
        android:text="@string/password"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNameReg" />

    <EditText
        android:id="@+id/etPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shape"
        android:hint="@string/password"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassReg" />

    <TextView
        android:id="@+id/tvConfirmPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="@dimen/label_padding"
        android:paddingBottom="@dimen/label_padding"
        android:text="@string/conf_password"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassReg" />

    <EditText
        android:id="@+id/etConfirmPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shape"
        android:hint="@string/conf_password"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassReg" />

    <Button
        android:id="@+id/btnSignupReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_sign_up"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>